--- a/dlvc-bartender/gradle.properties
+++ b/dlvc-bartender/gradle.properties
@@ -1,6 +1,7 @@
-ktor_version=2.3.7
-kotlin_version=1.9.22
-logback_version=1.4.11
 kotlin.code.style=official
-postgres_version=42.5.1
-h2_version=2.1.214
+ktorVersion=2.3.7
+kotlinVersion=1.9.22
+logbackVersion=1.4.12
+postgresVersion=42.5.1
+h2Version=2.2.220
+kotestVersion=4.6.3
